shinsplat_tensor_toys:
	7/8/2024
		See Tensor_Toys.txt for explanation.
shinsplat_clip_tokens_encode:
	7/8/2024
		Added a node that will take the output of _tokens and
		convert it into tensor blocks compatible with its associated
		intent, i.e. SD/T5.
		This also has a plugin for Tensor Toys.
shinsplat_text_to_tokens (SD/XL/SD3)
	7/8/2024
		There are two versions, the plain one works for SD and SDXL then
		there's the specific SD3 one as well, but the prior will work with
		SD3 but with fewer options.  Combined with "tokens_encode" this
		gives you token weight control.
shinsplat_lora_loader:
	6/20/2024
		When clip and model weight were zero I forgot to return
		expected values.  Fixed now.

shinsplat_clip_text_encode_T5:
	There's an SD3 version of this as well but I think I'll be working with this mostly
	because SD3 is probably not viable and I won't need to do anything more than testing
	and digging into the code and model, but anyway...

	8/4/2024
		T5 moved or removed, I just copied the silly thing.
	6/20/2024
		Updated to change tokens_out to tokens_raw so that I can populate tokens_out
		with the actual token values and weights, where I've also updated the SD
		encoder to the same method.  These outputs are Python dictionary formatted
		strings that can be evaluated into a list of dictionaries containing 1
		token set per element.
	6/14/2024
		Updated so that the directives are not piped to the output "prompt_out".
shinsplat_variables:
	6/14/2024
		A basic variable implementation, add $VARIABLES
		to your text input and use a dictionary/JSON
		to describe the changes, "VARIABLES": "this stuff",
shinsplat_string_interpolated:
	6/14/2024
		The existing text nodes didn't fit my needs,
		I enabled dynamic prompts and added the END
		directive.
shinsplat_green_box
	7/21/2024
		Added a random feature to the list of items.  It will grab
		the entire list first, randomize the list, then iterate through
		that list in order to prevent unnecessary repeats per list.